<resources>
    <string name="app_name">MC_Assignment_02_Task_01</string>
    <string name="username">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="con_password">Confirm Password</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="uploadPic">Upload Cover Picture</string>
    <string name="getStarted">GET STARTED</string>
    <string name="terms">Terms and Conditions</string>
</resources>
