<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/upper_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:paddingBottom="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/back_btn"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@drawable/ic_navigate_before_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/usr_img" />

        <ImageView
            android:id="@+id/usr_img"
            android:layout_width="110dp"
            android:layout_height="110dp"
            app:srcCompat="@drawable/user_with_circle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageView
            android:id="@+id/cam_img"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            app:srcCompat="@drawable/cam_with_circle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txt_upload_pic"
            app:layout_constraintTop_toBottomOf="@+id/usr_img" />

        <TextView
            android:id="@+id/txt_upload_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:textStyle="bold"
            android:text="@string/uploadPic"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintStart_toEndOf="@+id/cam_img"
            app:layout_constraintTop_toTopOf="@+id/cam_img" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="17dp"
        android:paddingEnd="17dp"
        android:paddingTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upper_box"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/txt_usr_name"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:hint="@string/username"
            android:textStyle="bold"
            android:padding="20dp"
            android:layout_margin="3dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txt_email"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txt_email"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:hint="@string/email"
            android:textStyle="bold"
            android:padding="20dp"
            android:layout_margin="3dp"
            app:layout_constraintStart_toEndOf="@+id/txt_usr_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/txt_pswrd" />

        <EditText
            android:id="@+id/txt_pswrd"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textStyle="bold"
            android:hint="@string/password"
            android:padding="20dp"
            android:layout_margin="3dp"
            android:layout_marginTop="10dp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_email"
            app:layout_constraintBottom_toTopOf="@+id/txt_con_pswrd" />

        <EditText
            android:id="@+id/txt_con_pswrd"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/con_password"
            android:padding="20dp"
            android:layout_margin="3dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_pswrd" />

        <EditText
            android:id="@+id/txt_day"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:hint="@string/day"
            android:textStyle="bold"
            android:padding="20dp"
            android:layout_margin="3dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txt_month"
            app:layout_constraintTop_toBottomOf="@+id/txt_con_pswrd" />

        <EditText
            android:id="@+id/txt_month"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:hint="@string/month"
            android:padding="20dp"
            android:layout_margin="3dp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/txt_day"
            app:layout_constraintEnd_toStartOf="@+id/txt_year"
            app:layout_constraintTop_toTopOf="@+id/txt_day" />

        <EditText
            android:id="@+id/txt_year"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:textStyle="bold"
            android:hint="@string/year"
            android:padding="20dp"
            android:layout_margin="3dp"
            app:layout_constraintStart_toEndOf="@+id/txt_month"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_month" />

        <Button
            android:id="@+id/start_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#384369"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="18dp"
            android:text="@string/getStarted"
            android:textStyle="bold"
            android:textColor="#E9DDDD"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_month"
            app:layout_constraintBottom_toTopOf="@+id/txt_terms" />

        <TextView
            android:id="@+id/txt_terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/terms"
            android:textColor="#0678C7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>